[metadata]
name = quibble
author = Michael Appels
author_email = mike.appels@gmail.com
description = Financial analytics package
version = attr: quibble.__version__
url = https://github.com/mjappels/quibble
keywords =
  finance
  quant
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research/Finance
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering/Finance
license_files =
#   LICENSE.txt

[options]
python_requires = >= 3.8.12
packages = find:
zip_safe = False
install_requires =
  numpy
  pandas

[options.extras_require]
test =
  # pytest
  # flake8
  # mypy

[options.entry_points]
console_scripts =
#  joesprog = mypkg:__main__:cli